--- a/less/index.less
+++ b/less/index.less
@@ -12,6 +12,12 @@
 a,input,button,select{
 	border:0;outline:none;		
 }
+body{
+	padding-top: 50px;
+}
+.navbar{
+	margin-bottom: 0px;
+}
 .main{
 	padding: 0;
 }
@@ -205,7 +211,6 @@ a,input,button,select{
 #to_top{
 	width:130px; 
 	height:130px; 
-	//padding:20px; 
 	font:14px/20px arial; 
 	text-align:center;  
 	background:url(../img/44.png) no-repeat center center; 
