--- a/web/cert/css/style.css
+++ b/web/cert/css/style.css
@@ -10,6 +10,7 @@
 .cont_head{
 	background-color:#2d2d2d;
 	padding: 33px 33px 0px 33px;
+	padding: 3.3rem 3.3rem 0px 3.3rem;
 	text-align: center;
 	color:#d7d7d7;
 	text-transform: uppercase;
@@ -18,7 +19,6 @@
 	background-color:#2d2d2d;
 	border:solid 10px #fff;
 	border-bottom: none;
-	width: 100%;
 	overflow: hidden;
 }
 .number{
@@ -59,13 +59,13 @@
 .cont_body{
 	background-color: #f2f2f2;
 	padding: 0px 33px 33px 33px;
+	padding: 0rem 3.3rem 3.3rem 3.3rem;
 	text-align: center;
 	color:#65666a;
 }
 .body_cont{
 	border:solid 10px #fff;
 	border-top: none;
-	width: 100%;
 	overflow: hidden;
 }
 .body_head{
