--- a/web/cert/css/style.css
+++ b/web/cert/css/style.css
@@ -2,7 +2,7 @@
   font-size: 62.5%;
   margin: 0;
   padding: 0;
-  font-family: '微软雅黑',Arial,Helvetica,'microsoft yahei',sans-serif;
+  font-family: Arial,Helvetica,'microsoft yahei',sans-serif;
 }
 *{
 	margin: 0;
@@ -27,7 +27,7 @@
 }
 .number{
 	text-align: right;
-	padding-top: 1vw;
+	padding-top: 2vw;
 	padding-right: 2vw;
 	font-size: 2vw;	
 }
@@ -109,89 +109,25 @@
 }
 @media only screen and (min-width: 481px){
     html {
-        font-size: 94%!important; /* 15.04÷16=94% */
+        font-size: 94%!important; 15.04÷16=94%
     }
 }
 @media only screen and (min-width: 561px){
     html {
-        font-size: 109%!important; /* 17.44÷16=109% */
+        font-size: 109%!important; 17.44÷16=109%
     }
 }
 @media only screen and (min-width: 641px){
     html {
-        font-size: 125%!important; /* 20÷16=125% */
+        font-size: 125%!important; 20÷16=125%
     }
 }
 
 /*横屏*/
 @media screen and (orientation:landscape) {
-
 }
 /*竖屏*/
 /* @media screen and (orientation:portrait) {
-	.cont_head{
-		padding: 20px 20px 0px 20px;
-		padding: 2rem 2rem 0px 2rem;
-	}
-	.cont_body{
-		padding: 0px 20px 20px 20px;
-		padding: 0rem 2rem 2rem 2rem;
-	}
-	.number{
-		font-size: 12px;
-		font-size: 1.2rem;
-	}
-    .head_title{
-		margin-top: 12px;
-    }
-    .head_title hr{
-    	margin:15px auto;
-    	height: 4px;
-    }
-    .head_cont{
-    	border:solid 4px #fff;
-		border-bottom: none;
-    }
-    .head_cont h3{
-    	font-size: 23px;
-    	font-size: 2.3rem;
-    }
-    .head_cont p{
-    	font-size: 14px;
-    	font-size: 1.4rem;
-		margin-top: 15px;
-		margin-bottom: 27px;
-    }
-    .body_cont {
-	    border: solid 4px #fff;
-	    border-top: none;
-	}
-    .body_head{
-    	padding-top: 23px;
-    }
-    .body_head h2{
-    	font-size: 30px;
-    	font-size: 3rem;
-    	margin-top: 27px;
-    	margin-bottom: 27px;
-    }
-    .body_head p{
-    	font-size: 10px;
-    	line-height: 14px;
-    }
-    .body_foot{
-    	padding-top: 25px;
-    }
-    .body_foot .left p, .body_foot .right p{
-    	margin-top: 45px;
-    	font-size:14px;
-    }
-    .body_foot span{
-    	font-size: 12px;
-    }
-    .body_foot .mid{
-    	width:90px;
-    }
 } */
 /*横屏*/
 /*@media screen and (orientation:portrait) {
