--- a/web/udap/_includes/nav.html
+++ b/web/udap/_includes/nav.html
@@ -5,7 +5,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="img/udap.png" alt="">
+                    <img src="img/udapnew.png" alt="">
                 </a>
             </div>
             
@@ -43,7 +43,7 @@
                 </ul>
                 <ul class="nav navbar-nav nav-rightCont navbar-right">
                     <li class="Nmr">
-                        <a class="page-scroll stress" href='/cases.html'><!-- <strong class="sprites social1"></strong> --><img src="img/nav/useCases.png" alt="">show Cases <span class="ico-new">new</span></a>
+                        <a class="page-scroll stress" href='/demo.html'><!-- <strong class="sprites social1"></strong> --><img src="img/nav/useCases.png" alt="">Demo <span class="ico-new">new</span></a>
                     </li>
                     <li>
                         <a class="page-scroll" href='/tokensale.html'><!-- <strong class="sprites social2"></strong> --><img src="img/nav/tokenSale.png" alt="">Token Sale</a>
