--- a/web/udap/_includes/solution.html
+++ b/web/udap/_includes/solution.html
@@ -17,7 +17,7 @@
                                  <li>
                                      <span class="number">02</span>
                                      <div class="mlist">
-                                        <h4>Fast, cheap and secure integration with public blockchains, without specific lock-in</h4>
+                                        <h4>Fast, cheap and secure integration with public blockchains, without specific lock-in. </h4>
                                          <p>UDAP implements State Channel technology to solve some of the most challenging issues with developing and running Blockchain-based applications. State Channel technology provides high scalability, low cost, privacy protection and immediate responsive.</p> 
                                      </div>
                                  </li>
