--- a/web/udap/_includes/matters.html
+++ b/web/udap/_includes/matters.html
@@ -10,7 +10,7 @@
                      <li class="media">
                          <div class="media-body">
                              <h3  class="media-heading">What are problems now?</h3>
-                             <p>Today, the blockchain is still in early stage, not much experience programmer, not much development tools, open source codes to help you to develop a blockchain application. it is difficult for developers to build application that can match Internet applications in terms of scalability, performance, cost and user experience.</p>
+                             <p>Today, the blockchain is still in early stage, not much experience programmer, not much development tools, open source codes to help you to develop a blockchain application. It is difficult for developers to build application that can match Internet applications in terms of scalability, performance, cost and user experience.</p>
                          </div>
                      </li>
                  </ul>
