--- a/web/udap/_includes/roadmap.html
+++ b/web/udap/_includes/roadmap.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="timeline-cont">
                       <div class="timeline-heading">
-                          <h4 style="line-height: 45px;">Project Kickoff</h4>
+                          <h4 style="line-height: 45px;">Project kickoff</h4>
                       </div>
                     </div>
                  </div>
@@ -38,7 +38,7 @@
                           <h4>Research completed</h4>
                       </div>
                       <div class="timeline-body">
-                          <p>Coding started <br>Core Team built up</p>
+                          <p>Coding started <br>Core team built up</p>
                       </div>  
                     </div>
                  </div>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="timeline-cont">
                       <div class="timeline-heading">
-                          <h4>UDAP Concept completed</h4>
+                          <h4>UDAP concept completed</h4>
                       </div>
                       <div class="timeline-body">
                           <p>Expand eco-system and community</p>
@@ -98,7 +98,7 @@
                           <h4>UDAP Minimum Viable Product(MVP) deployed and released</h4>
                       </div>
                       <div class="timeline-body speroadmap">
-                          <p>State channel modules completed <br> Harvest Asset Wallet (MVP) released <br> First app – UMedia (MVP) released</p>
+                          <p>State Channel modules completed <br> Harvest Wallet (MVP) released <br> First app – UMedia (MVP) released</p>
                       </div>  
                     </div>
                  </div>
@@ -115,10 +115,10 @@
                     </div>
                     <div class="timeline-cont">
                       <div class="timeline-heading">
-                          <h4>UDAP middleware V0.4 released</h4>
+                          <h4>UDAP Middleware V0.4 released</h4>
                       </div>
                       <div class="timeline-body">
-                          <p>Harvest Asset Wallet & UMedia officially released</p>
+                          <p>Harvest Wallet & UMedia officially released</p>
                       </div>  
                     </div>
                  </div>
