--- a/web/udap/style.css
+++ b/web/udap/style.css
@@ -8337,6 +8337,7 @@ ul.social-buttons li a:hover {
     border:1px solid rgba(246,246,246,0.40);
     top: 0px;
     bottom: 0px;
+    margin-top: 1px;
     margin-left: 1.5px;
 }
 .timeline-roadbottom{
@@ -8369,6 +8370,7 @@ ul.social-buttons li a:hover {
 
 @media (min-width: 768px){ 
     .timeline-road {
+        margin-top: 0;
         margin-left: 0;
     }
     #team p,
