--- a/web/udap/style.css
+++ b/web/udap/style.css
@@ -5044,7 +5044,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .navbar-toggle {
     position: relative;
     float: right;
-    margin:23px 10px;
+    margin:13px 10px;
     background-color: transparent;
     background-image: none;
     border: 1px solid transparent;
@@ -9547,7 +9547,7 @@ footer .social-buttons {
         overflow: hidden;
     }
     .intro .intro-body .brand-heading{
-        font-size: 88px;
+        font-size: 82px;
         margin-bottom: 15px;
    }
     .intro .intro-body hr{
@@ -9558,7 +9558,7 @@ footer .social-buttons {
     }
     
     .intro .intro-body .intro-text{
-        font-size:20px;
+        font-size:18px;
         line-height:32px;
         margin: 19px 0 7px 0;
     }
@@ -10783,7 +10783,7 @@ html{
 }
 .mobileMain{
     display: block;
-    padding-top: 70px;
+    /* padding-top: 90px; */
     overflow: hidden;
 }
 #mainPagination{
@@ -10845,7 +10845,7 @@ html{
     display: none;
 }
 #mDown{
-    display: block;
+    display: none;
     text-align: center;
 }
 #pcDown{
@@ -10951,7 +10951,7 @@ display: none;
 
 @media (max-width: 768px) {
     .navbar-custom .navbar-brand{
-        padding: 15px 0;
+        padding: 5px 0;
     }
 }
 /**
